mongo-express/mongo-express-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-express-deployment
  namespace: mongodb-express-namespace
  labels:
    app: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      containers:
        - name: mongodb-express
          image: mongo-express
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express-service
  namespace: mongodb-express-namespace
spec:
  selector:
    app: mongodb-express
  #type: LoadBalancer # This LoadBalancer type assigns to the service an external IP address and so accepts external requests.
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      #nodePort: 30000 # Port for external IP address. The port that we need to put to access. Must be between 30000 and 32767
